--- a/board/templates/board/home.html
+++ b/board/templates/board/home.html
@@ -40,9 +40,9 @@
 
 {% block title %}메인페이지{% endblock %}
 {% block og_title %}메인페이지{% endblock %}
-{% block description %}천방지축 NULL이 잡다한 IT 자료를 올리는 블로그{% endblock %}
-{% block current_url %}https://nulls.co.kr{{ request.get_full_path }}{% endblock %}
-{% block img %}https://nulls.co.kr/static/logo.ico{% endblock %}
+{% block description %}천방지축 Beany의 잡다한 IT 자료를 올리는 블로그{% endblock %}
+{% block current_url %}https://cwbeany.com{{ request.get_full_path }}{% endblock %}
+{% block img %}https://cwbeany.com/static/logo.ico{% endblock %}
 
 {% block script %}
 <script>
@@ -143,8 +143,8 @@
 
 <!-- 소개 -->
 <div class="p-4 bg-light rounded my-2">
-    <h5>About NULL BLOG</h5>
-    <div>NULL의 개인 블로그 입니다~! 개인 일상/프로젝트/자료 등 잡다한 내용이 담길 블로그 입니다! 잘 부탁드립니다~!</div>
+    <h5>About Beany's Blog</h5>
+    <div>Beany의 개인 블로그 입니다~! 개인 일상/프로젝트/자료 등 잡다한 내용이 담길 블로그 입니다! 잘 부탁드립니다~!</div>
 </div>
 
 <!-- Announce -->
