--- a/templates/404.html
+++ b/templates/404.html
@@ -4,7 +4,7 @@
 {% block title %}페이지 오류{% endblock %}
 {% block og_title %}페이지 오류{% endblock %}
 {% block description %}페이지가 존재하지 않습니다.{% endblock %}
-{% block current_url %}https://nulls.co.kr{{ request.get_full_path }}{% endblock %}
+{% block current_url %}https://cwbeany.com{{ request.get_full_path }}{% endblock %}
 
 {% block full %}
 <div class="mt-auto mx-auto">
