--- a/templates/email/notification/like_notification.html
+++ b/templates/email/notification/like_notification.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Nulls.co.kr 좋아요</title>
+    <title>cwbeany.com 좋아요</title>
 </head>
 <body>
     <h2>{{ post_title }}</h2>
