--- a/templates/email/notification/rereply_notification.html
+++ b/templates/email/notification/rereply_notification.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Nulls.co.kr 대댓글 작성</title>
+    <title>cwbeany.com 대댓글 작성</title>
 </head>
 <body>
     <h2>{{ information }}</h2>
