--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -13,9 +13,9 @@ html, body {
 
 {% block title %}회원가입{% endblock %}
 {% block og_title %}회원가입{% endblock %}
-{% block description %}NULL's 회원가입{% endblock %}
-{% block current_url %}https://nulls.co.kr{{ request.get_full_path }}{% endblock %}
-{% block img %}https://nulls.co.kr/static/logo.ico{% endblock %}
+{% block description %}Beany's 회원가입{% endblock %}
+{% block current_url %}https://cwbeany.com{{ request.get_full_path }}{% endblock %}
+{% block img %}https://cwbeany.com/static/logo.ico{% endblock %}
 
 {% block top %}
 <div class="container my-5">
