--- a/templates/base.html
+++ b/templates/base.html
@@ -196,7 +196,7 @@
 <div class="container">
     <div class="row flex-nowrap justify-content-between align-items-center py-2 border-bottom">
         <div class="col-8 fs-3 fw-bolder">
-            <span id="logo">NULL's BLOG</span>
+            <span id="logo">Beany's BLOG</span>
         </div>
         <div class="col-4 d-flex justify-content-end align-items-center">
             <!-- Button trigger modal -->
@@ -267,10 +267,10 @@
 {% block full %}{% endblock %}
 <footer class="footer mt-auto py-3 bg-light">
     <div class="container text-center">
-        <div class="text-muted fs-xs">Contact : cwadven4@gmail.com</div>
+        <div class="text-muted fs-xs">Contact : cwadven@naver.com</div>
         <div class="text-muted fs-xs">GitHub : <a target="_blank" href="https://github.com/cwadven">https://github.com/cwadven</a>
         </div>
-        <div class="text-muted fs-xs">© 2021 NULL's LIFE. All rights reserved</div>
+        <div class="text-muted fs-xs">© 2021 Beany's LIFE. All rights reserved</div>
     </div>
 </footer>
 <!-- Modal -->
