--- a/board/templates/board/home.html
+++ b/board/templates/board/home.html
@@ -87,23 +87,19 @@
 <!-- 최근 포스트 -->
 <h5 class="rounded-top border border-dark bg-light p-2">✏ 최근 포스트</h5>
 <div class="row g-2">
-    {% for post in recent_post_set %}
+    {% for post in recent_posts %}
     <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-        <a class="text-decoration-none text-dark" href="{% url 'board:post' post.board.url post.pk %}">
+        <a class="text-decoration-none text-dark" href="{% url 'board:post' post.board_url post.id %}">
         <div class="card">
             <div class="row g-0">
                 <div class="col-lg-8">
                     <div class="card-body">
                         <h5 class="card-title text-truncate">{{post.title}}</h5>
                         <p class="card-text truncate-3">{{post.short_body|striptags}}</p>
-                        <p class="card-text"><small class="text-muted"><i class="bi bi-calendar-week"></i> {{post.created_at|date:"Y-m-d"}}</small></p>
+                        <p class="card-text"><small class="text-muted"><i class="bi bi-calendar-week"></i> {{post.created_at}}</small></p>
                     </div>
                 </div>
-                {% if post.post_img %}
-                <div class="col-lg-4 card_img d-none d-lg-block rounded" style="background-image:url({{post.post_img.url}});"></div>
-                {% else %}
-                <div class="col-lg-4 card_img d-none d-lg-block rounded" style="background-image:url({% static 'logo.ico' %});"></div>
-                {% endif %}
+                <div class="col-lg-4 card_img d-none d-lg-block rounded" style="background-image:url({{post.image_url}});"></div>
             </div>
         </div>
         </a>
@@ -115,8 +111,8 @@
 {% block middle_left %}
 <!-- 좋아요 순 포스트 -->
 <h5 class="rounded-top border border-dark bg-light p-2">💌 좋아요 많은 게시글</h5>
-{% for post in liked_ordered_post_set %}
-<a class="text-decoration-none text-dark" href="{% url 'board:post' post.board.url post.pk %}">
+{% for post in liked_ordered_posts %}
+<a class="text-decoration-none text-dark" href="{% url 'board:post' post.board_url post.id %}">
     <div class="p-3 mb-3 border rounded">
         <h5>{{post.title}}</h5>
         <hr style="margin:5px;">
@@ -149,16 +145,16 @@
 
 <!-- Announce -->
 <div>
-    {% for announce in announce_set %}
+    {% for announce_info in announce_infos %}
     <div class="toast shadow-sm show mb-2" style="width: 100%;" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header" style="justify-content: space-between;">
             <div class="text-truncate">
-                <strong class="me-auto fs-xs"><i class="bi bi-exclamation-diamond-fill text-warning"></i> {{announce.title}}</strong>
+                <strong class="me-auto fs-xs"><i class="bi bi-exclamation-diamond-fill text-warning"></i> {{announce_info.title}}</strong>
             </div>
-            <small style="flex-shrink: 0;" class="text-muted">{{announce.created_at|date:'Y-m-d'}}</small>
+            <small style="flex-shrink: 0;" class="text-muted">{{announce_info.created_at|date:'Y-m-d'}}</small>
         </div>
         <div class="toast-body fs-xs">
-            {{announce.body}}
+            {{announce_info.body}}
         </div>
     </div>
     {% endfor %}
@@ -168,8 +164,8 @@
 <div class="py-2">
     <h5>TAGS</h5>
     <div class="d-flex flex-wrap">
-        {% for tags in tag_set %}
-            <a href="{% url 'board:board' '_'|add:tags.tag_name %}" class="badge bg-primary m-1 text-decoration-none text-white">{{tags.tag_name}} <span class="badge rounded-pill bg-light text-primary">{{tags.post_set.count}}</span></a>
+        {% for tag_info in tag_infos %}
+            <a href="{% url 'board:board' '_'|add:tag_info.tag_name %}" class="badge bg-primary m-1 text-decoration-none text-white">{{tag_info.tag_name}} <span class="badge rounded-pill bg-light text-primary">{{tag_info.post_count}}</span></a>
         {% endfor %}
     </div>
 </div>
