--- a/templates/email/common/backup_sql.html
+++ b/templates/email/common/backup_sql.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Health Check</title>
+    <title>Backup SQL</title>
 </head>
 <body>
-    <div>Health Check</div>
+    <div>Backup SQL</div>
 </body>
 </html>
