--- a/board/templates/board/home.html
+++ b/board/templates/board/home.html
@@ -132,7 +132,7 @@
 
 {% block middle_right %}
 <!-- 검색 하기 -->
-<form class="d-flex mb-3" style="justify-content: flex-end;" method="get" action="{% url 'board:board' 'search' %}">
+<form class="d-flex mb-3" style="justify-content: flex-end;" method="get" action="{% url 'board:all_board_posts' 'search' %}">
     <input class="me-2" type="text" value="{{ request.GET.search }}" name="search" placeholder="검색어를 입력하세요." />
     <button class="btn btn-sm btn-primary" type="submit">검색</button>
 </form>
