--- a/templates/components/modals/image_modal.html
+++ b/templates/components/modals/image_modal.html
@@ -78,7 +78,7 @@
                     : '') +
                 '</div>' +
                 (popup.description ?
-                    '<div style="white-space: pre-line; text-align: center;">' +
+                    '<div style="white-space: pre-line; text-align: center; padding: 10px;">' +
                     (popup.description || '') +
                     '</div>'
                     : '') +
