Feat: padding 추가
- padding 추가

--- a/templates/components/modals/image_modal.html
+++ b/templates/components/modals/image_modal.html
@@ -61,7 +61,7 @@
 
             var popupHtml =
                 '<div id="' + modalId + '" class="draggable custom-modal" ' +
-                'style="width: ' + modalWidth + 'px; left: ' + modalLeft + 'px; top: ' + modalTop + 'px; position: absolute;">' +
+                'style="width: ' + modalWidth + 'px; left: ' + modalLeft + 'px; top: ' + modalTop + 'px; position: absolute; max-width: 90%; box-sizing: border-box;">' +
                 '<div class="modal-content">' +
                 '<div class="header-modal" style="cursor: move; display: flex; justify-content: space-between; margin: 10px;">' +
                 '<div class="title-modal" id="staticBackdropLabel">' + (popup.title || '') + '</div>' +
