--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1987584597836949"
             crossorigin="anonymous"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-BVB1G38F8L"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1987584597836949" crossorigin="anonymous"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
