--- a/board/templates/board/post.html
+++ b/board/templates/board/post.html
@@ -509,17 +509,17 @@
     <!-- 다른 게시판에 있는 게시글 목록 최신 -->
     <div class="card mb-3">
         <ul class="list-group">
-            <li class="list-group-item fw-bolder">{{ post.board.name }} 최신 목록</li>
-            {% for list_post in qs|slice:'0:5' %}
-                {% if post.id == list_post.id %}
-                    <a href="{% url 'board:post' list_post.board.url list_post.pk %}"
+            <li class="list-group-item fw-bolder">{{ recent_board_post_layer.board_name }} 최신 목록</li>
+            {% for recent_post in recent_board_post_layer.posts %}
+                {% if post.id == recent_post.id %}
+                    <a href="{% url 'board:post' recent_board_post_layer.board_url recent_post.id %}"
                        class="list-group-item list-group-item-action d-flex justify-content-between align-items-center active">
                 {% else %}
-                    <a href="{% url 'board:post' list_post.board.url list_post.pk %}"
+                    <a href="{% url 'board:post' recent_board_post_layer.board_url recent_post.id %}"
                        class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
                 {% endif %}
-            <div class="text-truncate new-list-title">{{ list_post.title }}</div>
-            <span class="ms-2 badge bg-secondary rounded-pill">{{ list_post.reply_count }}</span>
+            <div class="text-truncate new-list-title">{{ recent_post.title }}</div>
+            <span class="ms-2 badge bg-secondary rounded-pill">{{ recent_post.reply_count }}</span>
             </a>
             {% endfor %}
         </ul>
